kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tudorpop
  namespace: tudorpop
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 'default-port'
  selector:
    app: tudorpop
  type: ClusterIP
